apps/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
  labels: &labels
    app: mealie
    app.kubernetes.io/component: mealie
    app.kubernetes.io/name: mealie
spec:
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v1.12.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 1
              memory: 2Gi
          ports:
            - containerPort: 9000
              name: web
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie-data
      restartPolicy: Always
