apps/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
  labels:
    app: mealie
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
spec:
  ports:
    - name: mealie-web
      port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: mealie
