apps/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
  labels:
    app: mealie
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/component: ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
        - mealie.rookian.dev
      secretName: tls-mealie-rookian-dev
  rules:
    - host: mealie.rookian.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  name: mealie-web
